--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_popover.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_popover.less
@@ -6,6 +6,10 @@
     display: table-cell;
     vertical-align: middle;
     height: 19em;
+    ul {
+      margin: 0;
+      font-size: 1em;
+    }
     li {
       font-size: 12px;
       padding: 8px 10px;
